--- a/chroniker/templates/admin/chroniker/job/change_form.html
+++ b/chroniker/templates/admin/chroniker/job/change_form.html
@@ -1,4 +1,5 @@
 {% extends "admin/change_form.html" %}
+{% load url from future %}
 {% load i18n chroniker_tags %}
 {% block object-tools %}
 {% if change %}{% if not is_popup %}
