--- a/chroniker/templates/admin/chroniker/job/duration_graph.html
+++ b/chroniker/templates/admin/chroniker/job/duration_graph.html
@@ -1,4 +1,5 @@
 {% extends 'admin/change_form.html' %}
+{% load url from future %}
 {% load i18n admin_urls admin_static admin_modify %}
 
 {% block breadcrumbs %}
